feat: move db file

--- a/AleTrack/AleTrack/appsettings.Development.json
+++ b/AleTrack/AleTrack/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "AleTrack" : "Data Source=aletrack.db"
+    "AleTrack" : "Data Source=Infrastructure/Persistence/aletrack.db"
   }
 }
