--- a/AleTrack/AleTrack/render.yaml
+++ b/AleTrack/AleTrack/render.yaml
@@ -4,6 +4,7 @@ services:
     runtime: docker
     plan: free
     branch: dev
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: ASPNETCORE_ENVIRONMENT
         value: Development
