feat: DEBUG: Add logging for pipeline

--- a/AleTrack/AleTrack/Dockerfile
+++ b/AleTrack/AleTrack/Dockerfile
@@ -22,6 +22,9 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/publish .
 
+# DEBUG - vypište co je v kontejneru
+RUN ls -la /app/*.json
+
 # Expose port (Render will set the PORT environment variable)
 EXPOSE $PORT
 
