--- a/AleTrack/AleTrack/render.yaml
+++ b/AleTrack/AleTrack/render.yaml
@@ -12,3 +12,8 @@ services:
         value: http://*:$PORT
       - key: ConnectionStrings__AleTrack
         value: Data Source=Infrastructure/Persistence/aletrack.db
+        
+    disk:
+      name: aletrack-data
+      mountPath: /data
+      sizeGB: 1
