fix: dockerfile port

--- a/AleTrack/AleTrack/Dockerfile
+++ b/AleTrack/AleTrack/Dockerfile
@@ -26,6 +26,6 @@ COPY --from=build /app/publish .
 RUN ls -la /app/*.json
 
 # Expose port (Render will set the PORT environment variable)
-EXPOSE 8080
+EXPOSE $PORT
 
 ENTRYPOINT ["dotnet", "AleTrack.dll"]
