--- a/AleTrack/AleTrack/appsettings.Development.json
+++ b/AleTrack/AleTrack/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "AleTrack" : "Data Source=Infrastructure/Persistence/aletrack.db"
+    "AleTrack": "User Id=postgres.fjqsgaktacdsozezknht;Password=[YOUR-PASSWORD];Server=aws-1-eu-central-1.pooler.supabase.com;Port=5432;Database=postgres"
   }
 }
