--- a/AleTrack/AleTrack/AleTrack.csproj
+++ b/AleTrack/AleTrack/AleTrack.csproj
@@ -35,4 +35,8 @@
         <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Infrastructure\Persistence\Migrations\" />
+    </ItemGroup>
+
 </Project>
