--- a/AleTrack/AleTrack/appsettings.Development.Local.json
+++ b/AleTrack/AleTrack/appsettings.Development.Local.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "AleTrack": "Host=localhost;Port=5432;Database=AleTrack;Username=postgres;Password=aletrack"
+    "AleTrack": "Host=localhost;Port=5432;Database=AleTrack;Username=postgres;Password="
   }
 }
